# Parallel-Best-First-Minimax-Search

./: CMakeLists.txt  README.md  main.cpp
